finish-js-logic

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <header class="header"></header>
     <main class="main">
         <section class="hero">
-          <article class="hero__to-do-container">
+          <article class="hero__to-do-container" id="paint">
+            <!-- <div class="hero__themes">
+                <button type="button" class="btn-theme btn-theme--cute" id="cuteBtn">S</button:b>
+                <button type="button" class="btn-theme btn-theme--dark" id="darkBtn">S</button:b>
+                <button type="button" class="btn-theme btn-theme--light" id="lightBtn">A</button:b>
+            </div> -->
             <div class="hero__text">
-                <h1 class="hero__title">Hola Nahuel!</h1>
-                <span class="hero__span" id="completed">Te quedan 0 tareas por realizar</span>
+                <h1 class="hero__title" id="h1"> <span id="nameUser"></span>!</h1>
+                <span class="hero__span" id="completed"></span>
                 <form action="" name="formtoDo" class="form">
                     <input type="text" name="task" class="form__input">
                 <input type="submit" class="btn addbtn" name="addTask"id="addTask" value="Add Task">
