--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                 <h1 class="hero__title" id="h1"> <span id="nameUser"></span>!</h1>
                 <span class="hero__span" id="completed"></span>
                 <form action="" name="formtoDo" class="form">
+                   <div class="form__inputs">
                     <input type="text" name="task" class="form__input">
-                <input type="submit" class="btn addbtn" name="addTask"id="addTask" value="Add Task">
+                    <input type="submit" class="btn addbtn" name="addTask"id="addTask" value="Add Task">
+                   </div>
                     <div class="form__buttons-container">
                         <button class="btn" id="deleteAll" type="button">Delete All</button>
                         <button class="btn" id="deleteComplete"type="button">Borrar Terminados</button>
