fix-problems-in-spanCompleteds

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <main class="main">
         <section class="hero">
           <article class="hero__to-do-container" id="paint">
-            <!-- <div class="hero__themes">
+            <div class="hero__themes">
                 <button type="button" class="btn-theme btn-theme--cute" id="cuteBtn">S</button:b>
                 <button type="button" class="btn-theme btn-theme--dark" id="darkBtn">S</button:b>
                 <button type="button" class="btn-theme btn-theme--light" id="lightBtn">A</button:b>
-            </div> -->
+            </div>
             <div class="hero__text">
                 <h1 class="hero__title" id="h1"> <span id="nameUser"></span>!</h1>
                 <span class="hero__span" id="completed"></span>
@@ -37,6 +37,7 @@
             </div>
             <ul class="hero__list-container" id="list-container">
                 <!-- <li class="hero__item"><input type="checkbox" class="check"><p class="hero__p">Hacer las cards de la section de cocina</p><button class="btn-remove" id="removeTask"><i class="fa-solid fa-trash remove"></i></button></li> -->
+                <!-- <li class="hero__item" data-id="1"><input type="checkbox" class="check"><p class="hero__p">Ingresa una tarea</p><button class="btn-remove"><i class="fa-solid fa-trash remove"></i></button></li> -->
             </ul>
           </article>
         </section>
