styles-btns-hovers-spanishTextHtml

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <form action="" name="formtoDo" class="form">
                    <div class="form__inputs">
                     <input type="text" name="task" class="form__input">
-                    <input type="submit" class="btn addbtn" name="addTask"id="addTask" value="Add Task">
+                    <input type="submit" class="btn addbtn" name="addTask"id="addTask" value="Añadir tarea">
                    </div>
                     <div class="form__buttons-container">
-                        <button class="btn" id="deleteAll" type="button">Delete All</button>
+                        <button class="btn" id="deleteAll" type="button">Borrar todo</button>
                         <button class="btn" id="deleteComplete"type="button">Borrar Terminados</button>
                     </div>
                 </form>
